@@ -1,3 +1,11 @@
+2014-01-07  Roland Stigge  <stigge@antcom.de>
+	    Michael Meissner  <meissner@linux.vnet.ibm.com>
+
+	PR 57386/target
+	* config/rs6000/rs6000.c (rs6000_legitimate_offset_address_p):
+	Only check TFmode for SPE constants.  Don't check TImode or
+	TDmode.
+
 2014-01-07  James Greenhalgh  <james.greenhalgh@arm.com>
 
 	* config/aarch64/aarch64-elf.h (ASM_SPEC): Remove identity spec for
